Fixing home issues (spacing on mobile)

--- a/css/activities.css
+++ b/css/activities.css
@@ -1,9 +1,21 @@
+#activities .scroll_container{
+    width: 95%;
+    height: 502px;
+    max-width: 1100px;
+    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10vh;
+}
+
 .activity_content{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     font-size: 1em;
     /* width: 1100px; */
-    min-width: 1100px;
+    width: 1100px;
     color: black;
     margin-left: auto;
     margin-right: auto;
@@ -74,18 +86,6 @@
     color: #024aaf;
     font-size: 1.4em;
     text-transform: uppercase;
-}
-
-#activities .scroll_container{
-    width: 95%;
-    max-width: 1100px;
-    height: 500px;
-    overflow: scroll;
-    overflow-x: auto;
-    overflow-y: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10vh;
 }
 
 @media screen and (min-width: 200px){
