--- a/css/main.css
+++ b/css/main.css
@@ -322,9 +322,9 @@ nav.header ul li a {
 } 
 
 #nameTop{
+    margin-top: -100px;
     font-size:8.5em;
     letter-spacing: 8px;
-    margin-top: 30px;
     user-select: none;
 }
 
@@ -407,10 +407,10 @@ nav.header ul li a {
         visibility: hidden;
     }
 }
-/* 
-@media (min-width: 400px) {
+
+@media (min-width: 700px) {
     #nameTop{
-        font-size: 25px;
+        margin-top: 30px;
     }
-} */
+}
 
